# rust-find

./: Cargo.toml  LICENSE  README.md
man/man1/: find.1  rust-find.1
src/: main.rs
